# FileServer

./: CMakeLists.txt  main.cpp
http/: header.h  mime.cpp  mime.h  parser.cpp  parser.h  request.h  response.cpp  response.h
include/: Request.h  Response.h  Server.h
server/: connection.cpp  connection.h  server.cpp  server.h  serverhandler.cpp  serverhandler.h
src/: Response.cpp
